PA3/cool.output
Terminals unused in grammar

   ERROR


State 122 conflicts: 9 shift/reduce
State 133 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: classlist

    2 classlist: class
    3          | classlist class

    4 class: CLASS TYPEID '{' featureslist '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' featureslist '}' ';'

    6 featureslist: features
    7             | %empty

    8 features: feature ';'
    9         | features feature ';'

   10 feature: OBJECTID '(' formallist ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID ':' TYPEID
   12        | OBJECTID ':' TYPEID ASSIGN expression

   13 formallist: formal
   14           | formallist ',' formal
   15           | %empty

   16 formal: OBJECTID ':' TYPEID

   17 expression: OBJECTID ASSIGN expression
   18           | expression '.' OBJECTID '(' paramexprpression ')'
   19           | expression '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   20           | OBJECTID '(' paramexprpression ')'
   21           | IF expression THEN expression ELSE expression FI
   22           | WHILE expression LOOP expression POOL
   23           | '{' expressions '}'
   24           | LET letexpression
   25           | CASE expression OF caselist ESAC
   26           | NEW TYPEID
   27           | ISVOID expression
   28           | INT_CONST
   29           | STR_CONST
   30           | BOOL_CONST
   31           | expression '+' expression
   32           | expression '-' expression
   33           | expression '*' expression
   34           | expression '/' expression
   35           | '~' expression
   36           | expression '<' expression
   37           | expression LE expression
   38           | expression '=' expression
   39           | NOT expression
   40           | '(' expression ')'
   41           | OBJECTID

   42 letexpression: OBJECTID ':' TYPEID IN expression
   43              | OBJECTID ':' TYPEID ASSIGN expression IN expression
   44              | OBJECTID ':' TYPEID ',' letexpression
   45              | OBJECTID ':' TYPEID ASSIGN expression ',' letexpression

   46 expressions: expression ';'
   47            | expressions expression ';'

   48 paramexprpression: expression
   49                  | paramexprpression ',' expression
   50                  | %empty

   51 caselist: caseone
   52         | caselist caseone

   53 caseone: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 18 19 20 40
')' (41) 10 18 19 20 40
'*' (42) 33
'+' (43) 31
',' (44) 14 44 45 49
'-' (45) 32
'.' (46) 18 19
'/' (47) 34
':' (58) 10 11 12 16 42 43 44 45 53
';' (59) 4 5 8 9 46 47 53
'<' (60) 36
'=' (61) 38
'@' (64) 19
'{' (123) 4 5 10 23
'}' (125) 4 5 10 23
'~' (126) 35
error (256)
CLASS (258) 4 5
ELSE (259) 21
FI (260) 21
IF (261) 21
IN (262) 42 43
INHERITS (263) 5
LET (264) 24
LOOP (265) 22
POOL (266) 22
THEN (267) 21
WHILE (268) 22
CASE (269) 25
ESAC (270) 25
OF (271) 25
DARROW (272) 53
NEW (273) 26
ISVOID (274) 27
STR_CONST (275) 29
INT_CONST (276) 28
BOOL_CONST (277) 30
TYPEID (278) 4 5 10 11 12 16 19 26 42 43 44 45 53
OBJECTID (279) 10 11 12 16 17 18 19 20 41 42 43 44 45 53
ASSIGN (280) 12 17 43 45
NOT (281) 39
LE (282) 37
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
classlist (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
featureslist (49)
    on left: 6 7, on right: 4 5
features (50)
    on left: 8 9, on right: 6 9
feature (51)
    on left: 10 11 12, on right: 8 9
formallist (52)
    on left: 13 14 15, on right: 10 14
formal (53)
    on left: 16, on right: 13 14
expression (54)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41, on right: 10 12 17 18 19 21 22 25 27 31 32
    33 34 35 36 37 38 39 40 42 43 45 46 47 48 49 53
letexpression (55)
    on left: 42 43 44 45, on right: 24 44 45
expressions (56)
    on left: 46 47, on right: 23 47
paramexprpression (57)
    on left: 48 49 50, on right: 18 19 20 49
caselist (58)
    on left: 51 52, on right: 25 52
caseone (59)
    on left: 53, on right: 51 52


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program    go to state 2
    classlist  go to state 3
    class      go to state 4


State 1

    4 class: CLASS . TYPEID '{' featureslist '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' featureslist '}' ';'

    TYPEID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: classlist .
    3 classlist: classlist . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


State 4

    2 classlist: class .

    $default  reduce using rule 2 (classlist)


State 5

    4 class: CLASS TYPEID . '{' featureslist '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' featureslist '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 classlist: classlist class .

    $default  reduce using rule 3 (classlist)


State 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' featureslist '}' ';'

    TYPEID  shift, and go to state 10


State 9

    4 class: CLASS TYPEID '{' . featureslist '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 7 (featureslist)

    featureslist  go to state 12
    features      go to state 13
    feature       go to state 14


State 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' featureslist '}' ';'

    '{'  shift, and go to state 15


State 11

   10 feature: OBJECTID . '(' formallist ')' ':' TYPEID '{' expression '}'
   11        | OBJECTID . ':' TYPEID
   12        | OBJECTID . ':' TYPEID ASSIGN expression

    '('  shift, and go to state 16
    ':'  shift, and go to state 17


State 12

    4 class: CLASS TYPEID '{' featureslist . '}' ';'

    '}'  shift, and go to state 18


State 13

    6 featureslist: features .
    9 features: features . feature ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (featureslist)

    feature  go to state 19


State 14

    8 features: feature . ';'

    ';'  shift, and go to state 20


State 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . featureslist '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 7 (featureslist)

    featureslist  go to state 21
    features      go to state 13
    feature       go to state 14


State 16

   10 feature: OBJECTID '(' . formallist ')' ':' TYPEID '{' expression '}'

    OBJECTID  shift, and go to state 22

    $default  reduce using rule 15 (formallist)

    formallist  go to state 23
    formal      go to state 24


State 17

   11 feature: OBJECTID ':' . TYPEID
   12        | OBJECTID ':' . TYPEID ASSIGN expression

    TYPEID  shift, and go to state 25


State 18

    4 class: CLASS TYPEID '{' featureslist '}' . ';'

    ';'  shift, and go to state 26


State 19

    9 features: features feature . ';'

    ';'  shift, and go to state 27


State 20

    8 features: feature ';' .

    $default  reduce using rule 8 (features)


State 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' featureslist . '}' ';'

    '}'  shift, and go to state 28


State 22

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 29


State 23

   10 feature: OBJECTID '(' formallist . ')' ':' TYPEID '{' expression '}'
   14 formallist: formallist . ',' formal

    ')'  shift, and go to state 30
    ','  shift, and go to state 31


State 24

   13 formallist: formal .

    $default  reduce using rule 13 (formallist)


State 25

   11 feature: OBJECTID ':' TYPEID .
   12        | OBJECTID ':' TYPEID . ASSIGN expression

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 11 (feature)


State 26

    4 class: CLASS TYPEID '{' featureslist '}' ';' .

    $default  reduce using rule 4 (class)


State 27

    9 features: features feature ';' .

    $default  reduce using rule 9 (features)


State 28

    5 class: CLASS TYPEID INHERITS TYPEID '{' featureslist '}' . ';'

    ';'  shift, and go to state 33


State 29

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


State 30

   10 feature: OBJECTID '(' formallist ')' . ':' TYPEID '{' expression '}'

    ':'  shift, and go to state 35


State 31

   14 formallist: formallist ',' . formal

    OBJECTID  shift, and go to state 22

    formal  go to state 36


State 32

   12 feature: OBJECTID ':' TYPEID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 51


State 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' featureslist '}' ';' .

    $default  reduce using rule 5 (class)


State 34

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


State 35

   10 feature: OBJECTID '(' formallist ')' ':' . TYPEID '{' expression '}'

    TYPEID  shift, and go to state 52


State 36

   14 formallist: formallist ',' formal .

    $default  reduce using rule 14 (formallist)


State 37

   21 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 53


State 38

   24 expression: LET . letexpression

    OBJECTID  shift, and go to state 54

    letexpression  go to state 55


State 39

   22 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 56


State 40

   25 expression: CASE . expression OF caselist ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 57


State 41

   26 expression: NEW . TYPEID

    TYPEID  shift, and go to state 58


State 42

   27 expression: ISVOID . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 59


State 43

   29 expression: STR_CONST .

    $default  reduce using rule 29 (expression)


State 44

   28 expression: INT_CONST .

    $default  reduce using rule 28 (expression)


State 45

   30 expression: BOOL_CONST .

    $default  reduce using rule 30 (expression)


State 46

   17 expression: OBJECTID . ASSIGN expression
   20           | OBJECTID . '(' paramexprpression ')'
   41           | OBJECTID .

    ASSIGN  shift, and go to state 60
    '('     shift, and go to state 61

    $default  reduce using rule 41 (expression)


State 47

   39 expression: NOT . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 62


State 48

   35 expression: '~' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 63


State 49

   23 expression: '{' . expressions '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression   go to state 64
    expressions  go to state 65


State 50

   40 expression: '(' . expression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 66


State 51

   12 feature: OBJECTID ':' TYPEID ASSIGN expression .
   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 12 (feature)


State 52

   10 feature: OBJECTID '(' formallist ')' ':' TYPEID . '{' expression '}'

    '{'  shift, and go to state 76


State 53

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   21           | IF expression . THEN expression ELSE expression FI
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    THEN  shift, and go to state 77
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 54

   42 letexpression: OBJECTID . ':' TYPEID IN expression
   43              | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   44              | OBJECTID . ':' TYPEID ',' letexpression
   45              | OBJECTID . ':' TYPEID ASSIGN expression ',' letexpression

    ':'  shift, and go to state 78


State 55

   24 expression: LET letexpression .

    $default  reduce using rule 24 (expression)


State 56

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   22           | WHILE expression . LOOP expression POOL
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    LOOP  shift, and go to state 79
    LE    shift, and go to state 67
    '<'   shift, and go to state 68
    '='   shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    '@'   shift, and go to state 74
    '.'   shift, and go to state 75


State 57

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   25           | CASE expression . OF caselist ESAC
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    OF   shift, and go to state 80
    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75


State 58

   26 expression: NEW TYPEID .

    $default  reduce using rule 26 (expression)


State 59

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   27           | ISVOID expression .
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 27 (expression)


State 60

   17 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 81


State 61

   20 expression: OBJECTID '(' . paramexprpression ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    $default  reduce using rule 50 (paramexprpression)

    expression         go to state 82
    paramexprpression  go to state 83


State 62

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression
   39           | NOT expression .

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 39 (expression)


State 63

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | '~' expression .
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression

    '@'  shift, and go to state 74
    '.'  shift, and go to state 75

    $default  reduce using rule 35 (expression)


State 64

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression
   46 expressions: expression . ';'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ';'  shift, and go to state 84


State 65

   23 expression: '{' expressions . '}'
   47 expressions: expressions . expression ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '}'         shift, and go to state 85
    '('         shift, and go to state 50

    expression  go to state 86


State 66

   18 expression: expression . '.' OBJECTID '(' paramexprpression ')'
   19           | expression . '@' TYPEID '.' OBJECTID '(' paramexprpression ')'
   31           | expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   36           | expression . '<' expression
   37           | expression . LE expression
   38           | expression . '=' expression
   40           | '(' expression . ')'

    LE   shift, and go to state 67
    '<'  shift, and go to state 68
    '='  shift, and go to state 69
    '+'  shift, and go to state 70
    '-'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '@'  shift, and go to state 74
    '.'  shift, and go to state 75
    ')'  shift, and go to state 87


State 67

   37 expression: expression LE . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 88


State 68

   36 expression: expression '<' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 89


State 69

   38 expression: expression '=' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 90


State 70

   31 expression: expression '+' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 91


State 71

   32 expression: expression '-' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 92


State 72

   33 expression: expression '*' . expression

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expression  go to state 93


State 73

   34 expression: expression '/' . expression
